--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "-": "^0.0.1",
+    "autoprefixer": "^10.4.14",
+    "D": "^1.0.0",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
